[metadata]
name = fetch-grsec-test-patch-and-kernel
summary = Download the latest grsecurity test patches and the matching linux kernel version.
license = MIT
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        License :: OSI Approved :: MIT License

[files]
packages = fetch_grsec_test_kernel

[entry_points]
console_scripts =
    fetch_grsec_test_kernel = fetch_grsec_test_kernel.cmd:main

[bdist_wheel]
universal=1
