[metadata]
name = fetch-linux-security-patches-and-kernel
summary = Download the latest linux-hardened or unofficial grsecurity 4.9 patch and the matching linux kernel version.
license = MIT
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        License :: OSI Approved :: MIT License

[files]
packages = fetch_security_patches_and_kernel

[entry_points]
console_scripts =
    fetch_security_patches_and_kernel = fetch_security_patches_and_kernel.cmd:main

[bdist_wheel]
universal=1
